--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,12 @@
 			<optional>true</optional>
 		</dependency>
 		<!-- Termina -->
+		<!-- Dependencia de validación de JSON -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
+		<!-- Termina -->
 	</dependencies>
 
 	<build>
