--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://34.31.105.73:3306/d_oficios
+spring.datasource.url=jdbc:mysql://localhost:3306/d_oficios
 spring.datasource.username=root
-spring.datasource.password=pizz4D3DonCangrej0(d-Of1c10s)#CLOUD
+spring.datasource.password=secret
 spring.jpa.hibernate.ddl-auto=none
