Ficheros para deploy a GCP

--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
 	<groupId>com.d-oficios</groupId>
 	<artifactId>api-rest</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<packaging>jar</packaging>
 	<name>api-rest</name>
 	<description>API de comunicación con AppMóvil d-oficios</description>
 	<properties>
